@@ -4,6 +4,7 @@ use Moose::Role;
 use Readonly;
 use List::MoreUtils qw/uniq/;
 use Carp;
+use Try::Tiny;
 
 with 'npg_pipeline::product::release' => {
        -alias    => { is_for_release => '_is_for_release' },
@@ -12,8 +13,8 @@ with 'npg_pipeline::product::release' => {
 our $VERSION = '0';
 
 Readonly::Scalar my $THOUSAND                    => 1000;
-Readonly::Scalar my $IRODS_ROOT_NON_NOVASEQ_RUNS => q[/seq];
-Readonly::Scalar my $IRODS_ROOT_NOVASEQ_RUNS     => q[/seq/illumina/runs];
+Readonly::Scalar my $PRODUCTION_IRODS_ROOT       => q[/seq];
+Readonly::Scalar my $IRODS_REL_ROOT_NOVASEQ_RUNS => q[illumina/runs];
 
 =head1 NAME
 
@@ -23,14 +24,14 @@ npg_pipeline::product::release::irods
 
 =head1 DESCRIPTION
 
-Moose role providing utility methods for iRODS context
+Moose role providing utility methods for iRODS context.
 
 =head1 SUBROUTINES/METHODS
 
 =head2 irods_root_collection_ns
 
-Configurable iRODS root collection for NovaSeq data.
-Defaults to /seq/illumina/runs .
+Configurable iRODS root collection path for NovaSeq data.
+Defaults to C<illumina/runs> .
 
 =cut
 
@@ -38,13 +39,16 @@ has 'irods_root_collection_ns' => (
   isa           => 'Str',
   is            => 'ro',
   required      => 0,
-  default       => $IRODS_ROOT_NOVASEQ_RUNS,
+  default       => $IRODS_REL_ROOT_NOVASEQ_RUNS,
 );
 
 =head2 irods_destination_collection
 
 Returns iRODS destination collection for the run.
 This attribute will be built if not supplied by the caller.
+C</seq> is used as the root of all collections.
+
+Examples of values: C</seq/425>, C</seq/illumina/runs/34/34567>.
 
 =cut
 
@@ -56,10 +60,60 @@ has 'irods_destination_collection' => (
 );
 sub _build_irods_destination_collection {
   my $self = shift;
-  return join q[/], $self->platform_NovaSeq()
-    ? ($self->irods_root_collection_ns, int $self->id_run/$THOUSAND)
-    : ($IRODS_ROOT_NON_NOVASEQ_RUNS),
-    $self->id_run;
+  my $c;
+  try {
+    $c = $self->irods_collection4run_rel(
+      $self->id_run, $self->platform_NovaSeq());
+  } catch {
+    $self->logcroak($_);
+  };
+  return join q[/], $PRODUCTION_IRODS_ROOT, $c;
+}
+
+=head2 irods_collection4run_rel
+
+Returns a relative path the run's destination collection. For the production
+iRODS this path does not have the root c</seq> component. This methos can
+be used as an instance method and a class (package) level method. If used
+as a class (package) level method, a hardcoded common iRODS path
+C<illumina/runs> is used for NovaSeq platform runs. In the instance method
+this path can be customised by setting the C<irods_root_collection_ns>
+attribute of the object. For objects it might be more convenient to use the
+C<irods_destination_collection> attribute.
+
+If the second argument is not present, the platform is not considered as
+NovaSeq.
+
+  my $rc = $obj->irods_collection4run_rel($id_run);
+  my $platform_is_novaseq = 1;
+  $rc = $obj->$obj->irods_collection4run_rel($id_run, $platform_is_novaseq);
+  
+  $rc = npg_pipeline::product::release::irods->
+    irods_collection4run_rel(45666, 0);
+  print $rc; # prints 45666
+
+  $rc = npg_pipeline::product::release::irods->
+    irods_collection4run_rel(45666, 1);
+  print $rc; # prints illumina/runs/45/45666
+
+=cut
+
+sub irods_collection4run_rel {
+  my ($self, $id_run, $platform_is_novaseq) = @_;
+
+  $id_run or croak 'Run id should be given.';
+  my @path = ($id_run);
+  if ($platform_is_novaseq) {
+    unshift @path, int $id_run/$THOUSAND;
+    # Is this method called as a class/package method or an instance method?
+    # For an instance method we need to retain the ability to configure
+    # the relative path for NovaSeq runs. 
+    unshift @path, ref $self
+                   ? $self->irods_root_collection_ns
+                   : $IRODS_REL_ROOT_NOVASEQ_RUNS;
+  }
+
+  return join q[/], @path;
 }
 
 =head2 irods_product_destination_collection
@@ -73,8 +127,46 @@ Returns iRODS destination collection for the argument product.
 
 sub irods_product_destination_collection {
   my ($self, $run_collection, $product) = @_;
-  $run_collection or $self->logcroak('Run collection required');
-  return $self->platform_NovaSeq()
+  my $dc;
+  try {
+    $dc = $self->irods_product_destination_collection_norf(
+          $run_collection, $product, $self->platform_NovaSeq());
+  } catch {
+    $self->logcroak($_);
+  };
+  return $dc;
+}
+
+=head2 irods_product_destination_collection_norf
+
+Returns iRODS destination collection for the argument product.
+Can be use as a package-level or class method since all its inputs are
+given as arguments. If the third argument is not present, the platform
+is not considered as NovaSeq.
+
+  my $product = npg_pipeline::product(rpt_list => '34567:2:1');
+  my $pc = $obj->irods_product_destination_collection_norf(
+                 $run_collection, $product);
+  my $platform_is_novaseq = 0;
+  $pc = $obj->irods_product_destination_collection_norf(
+    'some/irods/path/34/34567', $product, $platform_is_novaseq);
+  print $pc; # prints some/irods/path/34/34567 
+ 
+  $platform_is_novaseq = 1;
+  my $product = npg_pipeline::product(rpt_list => '34567:2:1');
+  $pc = npg_pipeline::product::release::irods->
+    irods_product_destination_collection_norf(
+    'some/irods/path/34/34567', $product, $platform_is_novaseq);
+  print $pc; # prints some/irods/path/34/34567/lane2/plex1
+  
+=cut
+
+sub irods_product_destination_collection_norf {
+  my ($self, $run_collection, $product, $platform_is_novaseq) = @_;
+
+  $run_collection or croak('Run collection iRODS path is required');
+  $product or croak('Product object is required');
+  return $platform_is_novaseq
          ? join q[/], $run_collection, $product->dir_path()
          : $run_collection;
 }
@@ -146,6 +238,8 @@ __END__
 
 =item Carp
 
+=item Try::Tiny
+
 =back
 
 =head1 INCOMPATIBILITIES
@@ -158,7 +252,7 @@ Marina Gourtovaia
 
 =head1 LICENSE AND COPYRIGHT
 
-Copyright (C) 2019,2020 Genome Research Ltd.
+Copyright (C) 2019,2020,2021 Genome Research Ltd.
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
